# upsum

./: .env.example  .gitignore  README.md  check_models.py  pyproject.toml
src/upsum/: __init__.py  __main__.py
